# Tales-of-Maj-Eyal-Save-Game-Monitor

./: .gitignore  CLAUDE.md  README.md  TOME_SaveMonitor.py  TOME_SaveMonitor_GUI.py  Tales of Maj'Eyal_v3.CT  agent.md  backups.py  models.py  monitor.py  parsers.py  pyproject.toml  requirements.txt  runtime_output.py  te4_client.py  tome_practice.py
.claude/: settings.json  settings.local.json
.githooks/: post-push
docs/: danger_alert_findings.md  enemy_scanning_plan.md  luajit_memory_reading.md  memory_rebase_baseline.json  tome_game_data.md  tome_mcp_server.md  tome_source_review.md
game_data/: __init__.py  _npc_cache.json  boss_templates.py  damage_types.py  effect_db.py  lua_extractor.py  npc_db.py  prodigy_db.py  talent_db.py  talent_icons.py  zone_manifest.py
gui/: app.py  battle_simulator.py  bridge.py  character_tab.py  dashboard_tab.py  enemy_panel.py  log_panel.py  main_window.py  memory_reader.py  preview_capture.py  progression_tab.py  settings_tab.py  sheet_view.py  sprite_composer.py  sprite_resolve.py  startup_trace.py  theme.py
scoring/: __init__.py  battle_simulator.py  combat_advice.py  combat_math.py  enemy_threat.py  ranks.py  talent_threat.py  talent_weapon.py
tests/: test_battle_simulator.py  test_boss_templates.py  test_memory_reader_validation.py  test_talent_db.py  test_talent_icons.py  test_tome_mcp_server.py  test_tome_practice.py  test_validate_memory_rebase.py
tools/: benchmark_startup.py  find_icons_by_color.py  find_lua_state.py  install_preview_automation.ps1  post_push_refresh_preview.ps1  probe_entities.py  (+4 more)
(+9 files in other folders)
